~MainContrainer border -> box-shadow to fix stacking with scrollbar; ~new active navlink indicator; ~chars layout adjustments

--- a/react/src/Components/AnimePage/Characters.module.scss
+++ b/react/src/Components/AnimePage/Characters.module.scss
@@ -7,8 +7,8 @@
 .characters {
   grid-column: 2/2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(6.5rem, 1fr));
-  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+  gap: 0.75rem 1.25rem;
   padding-bottom: 1.5rem;
 
   a {
