--- a/react/src/Components/MainContainer.module.scss
+++ b/react/src/Components/MainContainer.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-right: 2px solid var(--primary-a12p5);
   overflow-y: auto;
   overflow-x: hidden;
+  box-shadow: inset -2px 0 var(--primary-a12p5);
 }
